@@ -18,12 +18,12 @@ handlers:
   script: kay/main.py
   login: admin
 
-- url: /_ah/queue/deferred
-  script: $PYTHON_LIB/google/appengine/ext/deferred/deferred.py
-  login: admin
-
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
+  login: admin
+
+- url: /_ah/queue/deferred
+  script: kay/main.py
   login: admin
 
 - url: /.*
