@@ -5,7 +5,14 @@ Copyright 2009 by Accense Technology, Inc
 
 Kay framework - Release Notes
 
-Kay-0.3.0 - October ??, 2009
+Kay-0.4.0 - November ??, 2009
+=============================
+
+  - Added task_handler for deferred library that corresponds with
+    kay's rules.
+
+
+Kay-0.3.0 - October 27, 2009
 =============================
 
   - Added CacheMiddleware, cache_page decorator and FragmentCache
